laborations/lab2/testsuite/bad/bad/decl_cleanup_block_2.cc
int main() {
	{
		int x;
	}
	x = 4;
	return 2;
}
